--- a/Students/data-cleaning-student.ipynb
+++ b/Students/data-cleaning-student.ipynb
@@ -456,12 +456,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Proposer une fonction permettant d'aller des données brutes jusqu'au premier traitement des données.\n",
+    "## Proposer une fonction permettant d'aller des données brutes jusqu'au traitement des données.\n",
     "\n",
     "N'oubliez pas de permettre à l'utilisateur de pouvoir prendre des décisions et de l'aider à prendre ces décisions\n",
-    "Pensez à indiquer à l'utilisateur si le jeu de données est utilisable, quels sont les capteurs défaillant, quel semble être l'orientation des échanges nappe-rivière, les données de différence de charge semblent t'elles données les mêmes informations que les données du profils de température.\n",
+    "Pensez à indiquer à l'utilisateur si le jeu de données est utilisable, quels sont les capteurs défaillants, quel semble être l'orientation des échanges nappe-rivière, les données de différence de charge semblent-elles donner les mêmes informations que les données du profil de température.\n",
     "\n",
-    "Votre function doit prendre en entrée, les trois fichiers et proposer au fur et à mesure de son dérouler des propositions à l'utilisateur."
+    "Votre fonction doit prendre en entrée, les trois fichiers, le nom du point et proposer au fur et à mesure de son déroulé des propositions à l'utilisateur."
    ]
   },
   {
@@ -477,6 +477,13 @@
    "source": [
     "# Deux autres jeux de données sont disponibles sur le répertoire github.\n",
     "Votre rôle est de traiter et d'analyser ces données avec la méthodologie que vous avez développé"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Les trois jeux de données doivent etre sauvées dans le répertoire processed_data/PointXXX"
    ]
   }
  ],
