--- a/Students/data-cleaning-student.ipynb
+++ b/Students/data-cleaning-student.ipynb
@@ -2,12 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Premier traitement des chroniques de données (voir ppt)\n",
+    "=============="
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "5cd5061f-ae30-4837-a53b-690ffd5c5830",
     "_uuid": "9d82bf13584b8e682962fbb96131f2447d741679"
    },
    "source": [
-    "# Mettre en place notre environnement\n",
+    "# 1. Mettre en place notre environnement <a class=\"anchor\" id=\"chapter1\"></a>\n",
     "________\n",
     "\n",
     "La première chose que nous devons faire est de charger les bibliothèques et les ensembles de données que nous allons utiliser. Pour aujourd'hui, nous allons travailler avec deux ensembles de données : un contenant des chroniques de température dans le lit de la rivière (zone hyporhéique), et un autre contenant des les chroniques de différence de charge enregistré en **Volt**.\n",
@@ -57,9 +65,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Imprimez le noms des colonnes\n",
+    "# 2 Visualisation des données brutes\n",
+    "___\n",
+    "\n",
+    "## 2.1 Imprimez le noms des colonnes <a class=\"anchor\" id=\"section_2_1\"></a>\n",
     "renommer les colonnes du fichier capteur_riviere :  \tdates,tension_V,temperature_stream_C et celles du fichier capteur_ZH  :\n",
     "#,dates,temperature_depth_1_C,temperature_depth_2_C,temperature_depth_3_C,temperature_depth_4_C\n",
+    "\n",
+    "## 2.2 Réaliser un plot des données des deux fichiers <a class=\"anchor\" id=\"section_2_2\"></a>\n",
     "\n"
    ]
   },
@@ -67,7 +80,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transformez les données de différence de charge en mètres\n",
+    "# 3. Transformez les données de différence de charge en mètres\n",
+    "___\n",
+    "\n",
+    "\n",
+    "Rappel : U=U0+  $\\alpha$ * dH + $\\beta$ T\n",
     "\n"
    ]
   },
@@ -85,9 +102,10 @@
     "_uuid": "742028572a307a42ce40db0102171bc219b05282"
    },
    "source": [
-    "# Traitement des dates\n",
-    "## Vérifiez le type de données de notre colonne de date\n",
+    "# 4. Traitement des dates\n",
     "___\n",
+    "\n",
+    "## 4.1 Vérifiez le type de données de notre colonne de date\n",
     "\n",
     "Imprimer les dates des deux fichiers"
    ]
@@ -160,8 +178,8 @@
     "_uuid": "0939ce269aef7001e35cc8f2a5f1eed1f6160940"
    },
    "source": [
-    "## Convertir nos colonnes de date en datetime\n",
-    "___\n",
+    "## 4.2 Convertir nos colonnes de date en datetime\n",
+    "\n",
     "\n",
     "Maintenant que nous savons que notre colonne de date n'est pas reconnue comme une date, il est temps de la convertir pour qu'elle soit reconnue comme une date. Cette opération est appelée \"analyse syntaxique des dates\" car nous prenons une chaîne de caractères et identifions ses composants. Nous allons utiliser la fonction pd.to_datetime.\n",
     "\n",
@@ -212,8 +230,8 @@
     "_uuid": "a2cec7b480ef13c070d40ca0e0763d2d30a86a9c"
    },
    "source": [
-    "## Tracer le jour du mois pour vérifier l'analyse de la date\n",
-    "___\n",
+    "## 4.3 Tracer le jour du mois pour vérifier l'analyse de la date\n",
+    "\n",
     "\n",
     "L'un des plus grands dangers de l'analyse des dates est de mélanger les mois et les jours. La fonction to_datetime() a des messages d'erreur très utiles, mais il n'est pas inutile de vérifier que les jours du mois que nous avons extraits ont un sens. \n",
     "\n",
@@ -238,8 +256,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Valeurs aberrantes\n",
-    "\n",
+    "# 5. Valeurs aberrantes\n",
+    "________\n",
     "L'un des plus grands défis du nettoyage des données est l'identification et le traitement des valeurs aberrantes. En termes simples, les valeurs aberrantes sont des observations qui sont significativement différentes des autres points de données. Même les meilleurs algorithmes d'estimation des paramètres automatique seront moins performants si les observations aberrantes ne sont pas nettoyées des données, car elles impliquent des simulations obsolètes des variables.\n",
     "\n"
    ]
@@ -274,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Identification des valeurs aberrantes\n",
+    "## 5.1 Identification des valeurs aberrantes\n",
     "\n",
     "La présence de valeurs aberrantes dans les données peut avoir de nombreuses raisons. Parfois, les valeurs aberrantes peuvent être authentiques, alors que dans d'autres cas, elles peuvent être dues à des erreurs de saisie de données. Il est important de comprendre les raisons des valeurs aberrantes avant de les nettoyer.\n",
     "\n",
@@ -287,14 +305,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tracez les graphiques de distribution pour les différentes variables"
+    " Tracez les graphiques de distribution pour les différentes variables"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Box plot\n",
+    "### 5.1.1. Box plot\n",
     "\n",
     "Le box plot est une manière standardisée d'afficher la distribution des données sur la base du résumé en cinq chiffres (minimum, premier quartile (Q1), médiane, troisième quartile (Q3) et maximum). Elle est souvent utilisée pour identifier la distribution des données et détecter les valeurs aberrantes. La ligne de code ci-dessous trace le box plot de la variable numérique 'Loan_amount'. "
    ]
@@ -310,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Histogramme\n",
+    "### 5.1.2. Histogramme\n",
     "\n",
     "Un histogramme est utilisé pour visualiser la distribution d'une variable numérique. Une valeur aberrante apparaît en dehors du modèle général de distribution. La ligne de code ci-dessous trace un histogramme de la variable 'Revenu', en utilisant la fonction hist(). A histogram is used to visualize the distribution of a numerical variable. An outlier will appear outside the overall pattern of distribution. The line of code below plots a histogram of the 'Income' variable, using the hist() function. "
    ]
@@ -326,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Scatterplot\n",
+    "### 5.1.3. Scatterplot\n",
     "\n",
     "Un nuage de points permet de visualiser la relation entre deux variables quantitatives. Les données sont affichées sous la forme d'une collection de points, et tout point qui ne correspond pas au regroupement général des deux variables peut indiquer des valeurs aberrantes. \n",
     "\n",
@@ -345,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Identification des valeurs aberrantes avec l'écart interquartile (IQR)\n",
+    "## 5.2 Identification des valeurs aberrantes avec l'écart interquartile (IQR)\n",
     "\n",
     "L'écart interquartile (IQR) est une mesure de la dispersion statistique et est calculé comme la différence entre les 75e et 25e percentiles. Il est représenté par la formule IQR = Q3 - Q1. Les  lignes de code ci-dessous calculent et impriment l'écart interquartile pour chacune des variables de l'ensemble de données.  La règle générale est que tout ce qui n'est pas dans la plage de (Q1 - 1,5 IQR) et (Q3 + 1,5 IQR) est une valeur aberrante et peut être supprimé.\n"
    ]
@@ -353,8 +371,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "### Fonctions d'assistance\n",
+    "### 5.2.1 Fonctions d'assistance\n",
     "\n",
     "Ecrire des fonctions afin d'examiner chaque colonne des deux fichiers de données de terain et de calculer les 1er et 3e quartiles, l'intervalle inter-quartile et le minimum et le maximum. Toute valeur en dehors du minimum et du maximum est une valeur aberrante."
    ]
@@ -370,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Résolution de la distribution asymétrique…\n",
+    "### 5.2.2 Résolution de la distribution asymétrique…\n",
     "\n",
     "A partir de nos données dans un histogramme, nous pouvons obtenir une distribution asymétrique des données. Une seule grande barre avec de minuscules barres à gauche ou à droite (ou les deux) est un signe révélateur que des valeurs aberrantes peuvent être présentes dans les données et cela signifie que notre bel histogramme, bien rangé et normalement distribué, est complètement caché et obscurci par le seul grand bar.\n",
     "\n",
@@ -387,7 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Suppression des valeurs aberrantes et visualisation du résultat\n",
+    "### 5.2.3 Suppression des valeurs aberrantes et visualisation du résultat\n",
     "\n",
     "Après avoir fait tout le gros du travail dans les fonctions d'assistance, nous pouvons maintenant supprimer les lignes des données qui contiennent des valeurs aberrantes en dehors de | - et - | moustaches…\n",
     "\n"
@@ -404,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Expliquez le résultat\n",
+    "### 5.2.4 Expliquez le résultat\n",
     "est ce que cette méthodologie vous semble suffisante? Tentez de trouver les limites de cette méthodologie?\n",
     "Que pouvez vous apportez aux fonctions afin de les améliorer?"
    ]
@@ -418,7 +441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Valeurs abérantes avec la méthode score Z \n",
+    "## 5.3 Valeurs abérantes avec la méthode score Z \n",
     "Il s'agit d'une unité mesurée en écart-type. Fondamentalement, il s'agit d'une mesure de la distance entre le score brut et la moyenne. Il est compris entre -3 et +3, où 0 = moyenne et 1 = écart-type, c'est-à-dire une distribution normale.\n",
     "\n",
     "Cette méthode suggère qu'en tout point de données il existe une relation entre l'écart-type et la moyenne. Le score Z permet de trouver la distribution des données où la moyenne est égale à 0 et l'écart-type à 1, c'est-à-dire une distribution normale. Vous devez vous demander en quoi cela peut nous aider à identifier les valeurs aberrantes ? En calculant le score Z, nous redimensionnons et centrons les données et recherchons les points de données qui sont trop éloignés de zéro. Ces points de données qui sont trop éloignés de zéro seront traités comme des valeurs aberrantes. Dans la plupart des cas, un seuil de 3 ou -3 est utilisé, c'est-à-dire que si la valeur du score Z est supérieure ou inférieure à 3 ou -3 respectivement, ce point de données sera identifié comme aberrant.\n",
@@ -441,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparer les deux méthodologies, donner leurs avantages et leurs limitations\n",
+    "## 5.4 Comparer les deux méthodologies, donner leurs avantages et leurs limitations\n",
     "Vous pouvez proposer des alternatives."
    ]
   },
@@ -456,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Proposer une fonction permettant d'aller des données brutes jusqu'au traitement des données.\n",
+    "# 6. Proposer une fonction permettant d'aller des données brutes jusqu'au traitement des données.\n",
     "\n",
     "N'oubliez pas de permettre à l'utilisateur de pouvoir prendre des décisions et de l'aider à prendre ces décisions\n",
     "Pensez à indiquer à l'utilisateur si le jeu de données est utilisable, quels sont les capteurs défaillants, quel semble être l'orientation des échanges nappe-rivière, les données de différence de charge semblent-elles donner les mêmes informations que les données du profil de température.\n",
@@ -475,15 +498,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deux autres jeux de données sont disponibles sur le répertoire github.\n",
+    "## Deux autres jeux de données sont disponibles sur le répertoire github.\n",
     "Votre rôle est de traiter et d'analyser ces données avec la méthodologie que vous avez développé"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Les trois jeux de données doivent etre sauvées dans le répertoire processed_data/PointXXX"
    ]
   }
  ],
